# generate-raman

./: 00-generate_data_config.py  01-generate_spectra_from_config.py  02-benchmark.py  README.md  _tf_run.sh  deep_dive.ipynb  environment.yml  eval_metrics.ipynb  plot_all.ipynb  pyproject.toml  test.py  virtual-packages.yml
data_configs/: data_500.json
results/: wandb_export_2023-02-25T16_52_47.295-07_00.csv
wandb/: latest-run
wandb/run-20230219_105014-dlffbmfp/: run-dlffbmfp.wandb
wandb/run-20230219_105014-dlffbmfp/files/: conda-environment.yaml  config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
