[tool.poetry]
name = "generate-raman"
version = "0.1.0"
description = ""
authors = ["Hud Wahab <hudwahab@gmail.com>"]
readme = "README.md"
packages = [{include = "generate_raman"}]

[tool.poetry.dependencies]
python = "3.7.11"
tensorflow = "2.6.0"
keras = "2.6.0"
torch = "1.11.0"
torchaudio = "0.11.0"
torchvision = "0.12.0"
conda-lock = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
